# CoroTaskHpp

./: CMakeLists.txt  README.md  Task.hpp  test.cpp
vs2017/: coro_test.sln  coro_test.vcxproj
